# codex-npu-context

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  codex_npu_context.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
codex_npu_context_core/: __init__.py  chunking.py  config.py  files.py  indexer.py  metrics.py  openvino_embedder.py  retrieval.py  search.py  secrets.py
examples/: codex-config.toml  codex-skill.md  github-actions-ci.yml
mcp/: index.js
scripts/: benchmark.ps1  doctor.ps1  dual-search.ps1  index-codex-memory.ps1  index-example.ps1  install-codex.ps1  install-portable-codex.ps1  install-python311.ps1  install-skill.ps1  install.ps1  mcp-smoke.ps1  mcp-warm-benchmark.ps1  quality-benchmark.ps1  search.ps1  secret-scan.ps1  self-test.ps1  status.ps1  verify-codex-install.ps1
skills/codex-npu-context/: SKILL.md
skills/codex-npu-context/agents/: openai.yaml
tests/: test_core.py
