[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-npu-context"
version = "0.1.0"
description = "Local semantic recall engine for Codex using Intel NPU, OpenVINO, MCP, and rg."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "openvino>=2025.0",
  "transformers>=4.51",
  "huggingface_hub>=0.30",
]

[project.scripts]
codex-npu-context = "codex_npu_context:main"

[tool.setuptools]
py-modules = ["codex_npu_context"]
packages = ["codex_npu_context_core"]
